default/objects/Health_Check_Notification__c/Health_Check_Notification__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Health Check Notification</label>
</CustomObject>