default/objects/Health_Check_Notification__c/fields/Email_Body__c.field-meta.xml
<CustomField>
    <fullName>Email_Body__c</fullName>
    <label>Email Body</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>