default/objects/Health_Check_Notification__c/fields/Email_Subject__c.field-meta.xml
<CustomField>
    <fullName>Email_Subject__c</fullName>
    <label>Email Subject</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>