default/objects/Health_Check_Notification__c/fields/Emails__c.field-meta.xml
<CustomField>
    <fullName>Emails__c</fullName>
    <description>Separated by comma</description>
    <inlineHelpText>Separated by comma</inlineHelpText>
    <label>Emails</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>