default/objects/Health_Check_Notification__c/listViews/All_records.listView-meta.xml
<ListView>
    <fullName>All_records</fullName>
    <columns>NAME</columns>
    <columns>Country__c</columns>
    <columns>Email_Body__c</columns>
    <columns>Emails__c</columns>
    <columns>Email_Subject__c</columns>
    <filterScope>Everything</filterScope>
    <label>All records</label>
    <language>en_US</language>
</ListView>